[gd_scene load_steps=4 format=3 uid="uid://kpra7gmcmyvk"]

[ext_resource type="PackedScene" uid="uid://bys3o70iep8p6" path="res://scenes/block.tscn" id="1_rv00b"]
[ext_resource type="Script" path="res://scripts/tetris_piece.gd" id="1_vo5vj"]
[ext_resource type="PackedScene" uid="uid://cofwie3ocmxf5" path="res://scenes/block_placed.tscn" id="2_64pgi"]

[node name="TetrisPiece" type="Node2D"]
z_index = -1
script = ExtResource("1_vo5vj")
placed_block_scene = ExtResource("2_64pgi")

[node name="Block" parent="." instance=ExtResource("1_rv00b")]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="LongPressCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="bounds" type="Area2D" parent="."]

[node name="rotation_probe" type="Area2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="bounds" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="bounds" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="rotation_probe" to="." method="_on_rotation_probe_area_entered"]
[connection signal="area_exited" from="rotation_probe" to="." method="_on_rotation_probe_area_exited"]
